[gd_scene load_steps=14 format=3 uid="uid://cy8nsco4dsnqh"]

[ext_resource type="Script" uid="uid://bjfb0c7jwsrv2" path="res://Scripts/start_menu_scene.gd" id="1_3yj3u"]
[ext_resource type="Script" uid="uid://bafjj6twn6wqh" path="res://Scripts/marker_center.gd" id="1_vdot4"]
[ext_resource type="Texture2D" uid="uid://b4500aeqmw17i" path="res://Assets/Finished/Elevator/doorleft.jpg" id="2_fgyjo"]
[ext_resource type="PackedScene" uid="uid://ba28mvps3jdwt" path="res://Shader/noise_shader.tscn" id="2_kwaka"]
[ext_resource type="Texture2D" uid="uid://dpfms7g6xw08f" path="res://Assets/Finished/Elevator/doorright.jpg" id="3_85mc1"]
[ext_resource type="Texture2D" uid="uid://v2f85c3clceq" path="res://Assets/Finished/Elevator/corridorsolo.jpg" id="3_kwaka"]
[ext_resource type="Texture2D" uid="uid://cw57o33mlp4gw" path="res://Assets/Finished/Elevator/Doors.png" id="4_fgyjo"]
[ext_resource type="Texture2D" uid="uid://x7m8rm4n86v" path="res://Assets/Finished/ElevatorNew/dooropenlast.png" id="7_yye11"]
[ext_resource type="Texture2D" uid="uid://cogywr38jk4wc" path="res://Assets/Finished/UI/HELLEVATOR Logo.png" id="8_kwaka"]

[sub_resource type="Animation" id="Animation_yye11"]
resource_name = "DoorRemove"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxAtHome/Doors:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(640, 480), Vector2(1200, 480)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ParallaxAtHome/Doors:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-262, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ParallaxAtHome/Doors:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_3yj3u"]
resource_name = "LogoDown"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxAtHome/Logo:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 480)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ParallaxAtHome/Logo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 433.17)]
}

[sub_resource type="Animation" id="Animation_kwaka"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxAtHome/Logo:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 480)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ParallaxAtHome/Logo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ParallaxAtHome/Doors:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 480)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ParallaxAtHome/Doors:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ParallaxAtHome/Doors:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yye11"]
_data = {
&"DoorRemove": SubResource("Animation_yye11"),
&"LogoDown": SubResource("Animation_3yj3u"),
&"RESET": SubResource("Animation_kwaka")
}

[node name="StartMenuScene" type="Node2D"]
script = ExtResource("1_3yj3u")

[node name="NoiseShader" parent="." instance=ExtResource("2_kwaka")]
visible = false

[node name="ParallaxAtHome" type="Node2D" parent="."]

[node name="BG" type="ColorRect" parent="ParallaxAtHome"]
offset_right = 640.0
offset_bottom = 480.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Flur" type="TextureRect" parent="ParallaxAtHome"]
texture_filter = 1
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2, 2)
texture = ExtResource("3_kwaka")
metadata/_edit_use_anchors_ = true

[node name="DoorLeft" type="TextureRect" parent="ParallaxAtHome"]
visible = false
offset_left = -90.0
offset_right = 70.0
offset_bottom = 240.0
scale = Vector2(2, 2)
texture = ExtResource("2_fgyjo")

[node name="DoorRight" type="TextureRect" parent="ParallaxAtHome"]
visible = false
offset_left = 410.0
offset_right = 570.0
offset_bottom = 240.0
scale = Vector2(2, 2)
texture = ExtResource("3_85mc1")

[node name="Doors" type="TextureRect" parent="ParallaxAtHome"]
offset_right = 640.0
offset_bottom = 480.0
texture = ExtResource("4_fgyjo")
metadata/_edit_use_anchors_ = true

[node name="DoorFrame" type="TextureRect" parent="ParallaxAtHome"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2, 2)
texture = ExtResource("7_yye11")
metadata/_edit_use_anchors_ = true

[node name="Logo" type="TextureRect" parent="ParallaxAtHome"]
z_index = 11
offset_right = 640.0
offset_bottom = 480.0
texture = ExtResource("8_kwaka")
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="MarkerCenter" type="Marker2D" parent="."]
position = Vector2(320, 240)
script = ExtResource("1_vdot4")

[node name="ButtonStart" type="Button" parent="."]
offset_left = 531.0
offset_top = 302.0
offset_right = 612.0
offset_bottom = 333.0
theme_override_colors/font_hover_pressed_color = Color(0.491046, 0.0351962, 0.0469354, 1)
theme_override_colors/font_color = Color(0.698039, 0.0705882, 0.0862745, 1)
text = "DESCEND
"

[node name="AnimationLogo" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yye11")
}

[connection signal="pressed" from="ButtonStart" to="." method="_on_button_start_pressed"]
